<resources>
    <string name="app_name">Galaxy TV Stick</string>
    <string name="login_title">Konekte ak kont IPTV ou</string>
    <string name="hint_server">Sèvè (egz: http://example.com:8080)</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Konekte</string>
    <string name="error_fill_all">Tanpri ranpli tout chan yo.</string>
    <string name="error_bad_login">Username oswa password la pa bon.</string>
    <string name="error_network">Pa ka konekte ak sèvè a. %1$s</string>
    <string name="device_info_fmt">Device ID: %1$s  •  Aparèy la sipòte jiska %2$s</string>
    <string name="device_id_fmt">MAC: %1$s</string>
    <string name="hint_search">Chèche yon chanèl…</string>
    <string name="cat_favorites">★ Favori</string>
    <string name="cat_all">Tout chanèl</string>
    <string name="live_events">🔴 Evènman an dirèk</string>
    <string name="live_now">AN DIRÈK KOUNYE A</string>
    <string name="empty_list">Pa gen chanèl nan lis sa a.</string>
    <string name="back">Retounen</string>
    <string name="retry">Eseye ankò</string>
    <string name="logout">Dekonekte</string>
    <string name="logout_confirm">Ou vle dekonekte kont sa a?</string>
    <string name="yes">Wi</string>
    <string name="no">Non</string>
    <string name="ok">OK</string>
    <string name="fav_added">%1$s ajoute nan favori</string>
    <string name="fav_removed">%1$s retire nan favori</string>
    <string name="channel_unavailable">Chanèl sa a pa disponib.</string>
    <string name="hint_longpress">Kenbe OK pou ajoute nan favori</string>
    <string name="error_playback">Chanèl la pa ka jwe (%1$s). Eseye yon lòt chanèl.</string>
    <string name="ad_label">PIBLISITE</string>
    <string name="ad_skip_in">Ou ka sote nan %1$d s</string>
    <string name="ad_skip_now">Peze OK pou sote ▶</string>
    <string name="broadcast">Mesaj</string>
    <string name="device_blocked">Aparèy sa a bloke.</string>
    <string name="device_expired">Abònman ou ekspire.</string>
    <string name="device_pending">Aparèy sa a poko aktive.</string>
    <string name="blocker_help">Kontakte sèvis kliyan an epi ba yo MAC ki anba a.</string>
    <string name="tv_guide">📅 Gid TV</string>
    <string name="epg_loading">Gid la ap chaje…</string>
    <string name="epg_no_info">Pa gen enfòmasyon pwogram</string>
    <string name="epg_next_fmt">Apre: %1$s  %2$s</string>
    <string name="epg_empty">Sèvè IPTV a pa voye okenn gid pou chanèl sa yo.</string>
    <string name="epg_error">Gid la pa ka chaje. %1$s</string>
    <string name="epg_play_hint">OK = chwazi chanèl  •  OK ankò = plen ekran  •  ◀ ▶ = tan  •  BACK = kategori</string>
    <string name="label_mac">MAC ADDRESS</string>
    <string name="label_device_key">DEVICE KEY</string>
    <string name="waiting_playlist">Ap tann founisè a aktive aparèy la…</string>
    <string name="connecting_playlist">Ap konekte ak %1$s…</string>
    <string name="panel_offline">Pa ka rive nan panel la. N ap eseye ankò…</string>
    <string name="choose_playlist">Chwazi yon playlist</string>
    <string name="refresh_now">↻ Tcheke kounye a</string>
    <string name="error_playlist_bad">Playlist \"%1$s\" pa mache: username oswa password la pa bon.</string>
    <string name="error_no_server">Playlist \"%1$s\" pa gen adrès sèvè. Mete sèvè a nan panel la.</string>
    <string name="playlist">Playlist</string>
    <string name="playlist_removed">Playlist ou a retire nan panel la.</string>
    <string name="current_mark">✓ %1$s</string>
    <string name="device_short_fmt">MAC: %1$s  •  Jiska %2$s</string>
    <string name="loading_channels">Ap chaje chanèl yo…</string>
    <string name="playlists">📋 Playlist</string>
    <string name="settings">⚙ Paramèt</string>
    <string name="exit_title">Soti</string>
    <string name="exit_confirm">Ou vle soti nan Galaxy TV Stick?</string>
    <string name="switching_playlist">Ap chanje playlist…</string>
    <string name="settings_info">Playlist: %1$s\nMAC: %2$s\nDevice Key: %3$s\nAparèy la sipòte jiska: %4$s\nVèsyon: %5$s</string>
    <string name="maintenance_title">Sèvis la an mentenans</string>
    <string name="remote_message_title">💬 Sèvis kliyan</string>
    <string name="remote_play">🛠 Sèvis kliyan an chanje chanèl la</string>
    <string name="remote_reload">🛠 Sèvis kliyan an ap rechaje chanèl yo</string>
    <string name="remote_restart">🛠 Sèvis kliyan an ap redemare app la</string>
    <string name="remote_logout">🛠 Sèvis kliyan an dekonekte playlist la</string>
    <string name="remote_refresh">🛠 Sèvis kliyan an mete TV a ajou</string>
    <string name="language">🌐 Lang</string>
    <string name="movies">🎬 Films</string>
    <string name="series">🎞 Séries</string>
    <string name="live_tv">📺 TV an dirèk</string>
    <string name="catchup_label">⏪ CATCH-UP</string>
    <string name="vod_search_hint">🔍 Chèche…</string>
    <string name="vod_continue">▶ Kontinye gade</string>
    <string name="vod_all">Tout</string>
    <string name="vod_continue_empty">Pa gen anyen pou kontinye. Kòmanse yon fim oswa yon seri, l ap parèt isit la.</string>
    <string name="vod_fav_empty">Pa gen favori. Kenbe OK sou yon afich pou ajoute l.</string>
    <string name="vod_search_results">Rezilta pou “%1$s”</string>
    <string name="vod_search_none">Pa jwenn anyen.</string>
    <string name="vod_left">%1$d min ki rete</string>
    <string name="vod_from_start">↺ Depi kòmansman</string>
    <string name="vod_play">▶ Gade</string>
    <string name="vod_resume">▶ Kontinye (%1$s)</string>
    <string name="vod_play_episode">▶ Gade %1$s</string>
    <string name="vod_in_favorites">★ Nan favori</string>
    <string name="vod_add_favorite">☆ Favori</string>
    <string name="vod_season">Sezon %1$d</string>
    <string name="vod_no_episodes">Seri sa a poko gen epizòd.</string>
    <string name="vod_director">Reyalizatè: %1$s</string>
    <string name="vod_cast">Aktè: %1$s</string>
    <string name="vod_next_episode">PWOCHEN EPIZÒD</string>
    <string name="vod_resumed_at">Kontinye nan %1$s</string>
    <string name="vod_error_playback">Videyo sa a pa ka jwe (%1$s).</string>
    <string name="epg_catchup_hint">⏪ OK = gade l an catch-up</string>
    <string name="catchup_unavailable">Chanèl sa a pa gen catch-up pou pwogram sa a.</string>
    <string name="stream_unavailable">Chanèl sa a pa disponib kounye a. Eseye yon lòt chanèl.</string>
    <string name="stream_no_network">Pa gen koneksyon ak sèvè a. Verifye entènèt la epi eseye ankò.</string>
    <string name="stream_refused">Sèvè a refize chanèl sa a (abònman an oswa kantite ekran pèmèt).</string>
    <string name="stream_unsupported">Aparèy sa a pa ka jwe fòma chanèl sa a.</string>
    <string name="rail_tv">TV an dirèk</string>
    <string name="crash_title">App la te fèmen sibitman dènye fwa</string>
    <string name="home_tagline">Divètisman pou tout moun</string>
    <string name="home_live_label">TV AN DIRÈK</string>
    <string name="home_watch_title">Gade televizyon an dirèk</string>
    <string name="home_channels_ready">%1$d chanèl pare.</string>
    <string name="home_watch_now">Gade kounye a  ›</string>
    <string name="home_guide_title">Live TV</string>
    <string name="home_guide_sub">Chanèl ak gid</string>
    <string name="home_movies">Fim</string>
    <string name="home_movies_sub">Gade fim</string>
    <string name="home_series">Seri</string>
    <string name="home_series_sub">Emisyon TV</string>
    <string name="home_kids">Timoun</string>
    <string name="home_kids_sub">Pou tout fanmi an</string>
    <string name="home_settings">Reglaj</string>
    <string name="home_settings_sub">Reglaj app la</string>
    <string name="home_footer">Gade TV an dirèk, fim, seri ak plis ankò…</string>
    <string name="home_connected">📶  Konekte</string>
    <string name="home_connecting">Ap konekte…</string>
    <string name="home_no_kids">Playlist sa a pa gen kategori timoun.</string>
    <string name="set_change_playlist">Chanje playlist</string>
    <string name="set_reload">Rechaje chanèl yo</string>
    <string name="set_device_info">Enfòmasyon aparèy la</string>
    <string name="set_info_fmt">Kliyan: %1$s\nMAC: %2$s\nDevice Key: %3$s\nVèsyon: %4$s</string>
    <string name="stream_blocked_network">Rezo entènèt la ap bloke chanèl sa a (sekirite routè a oswa founisè entènèt la). Kontakte sèvis kliyan an.</string>
    <string name="menu_home">Akèy</string>
    <string name="menu_live">Live TV</string>
    <string name="menu_favorites">Favori</string>
    <string name="menu_catchup">Catch Up</string>
    <string name="home_continue">Kontinye gade</string>
    <string name="home_continue_empty">Fim ak seri ou kòmanse gade ap parèt isit la.</string>
    <string name="home_live_sub">Tout chanèl ou yo</string>
    <string name="home_catchup_sub">Pa janm rate yon emisyon</string>
    <string name="home_fav_sub">Lis pèsonèl ou</string>
    <string name="home_categories">Kategori Live TV</string>
    <string name="home_all_channels">Tout chanèl</string>
    <string name="home_left_fmt">%1$s rete</string>
    <string name="home_no_fav">Ou poko gen chanèl favori. Peze OK lontan sou yon chanèl nan lis la pou ajoute l.</string>
    <string name="home_plan_fmt">Plan: %1$s</string>
    <string name="home_exp_fmt">Ekspire: %1$s</string>
    <string name="menu_search">Chèche</string>
    <string name="menu_tv">TV</string>
    <string name="search_hint">Tape non yon chanèl, yon fim oswa yon seri</string>
    <string name="search_none">Pa jwenn anyen</string>
    <string name="quick_guide">Gid TV</string>
    <string name="quick_channels">Chanèl</string>
    <string name="quick_clear">Efase istwa</string>
    <string name="set_parental_on">Kontwòl paran: LIMEN</string>
    <string name="set_parental_off">Kontwòl paran: ETENN</string>
    <string name="parental_new_pin">Kreye yon PIN 4 chif</string>
    <string name="parental_enter_pin">Antre PIN 4 chif la</string>
    <string name="parental_pin_4">PIN lan dwe gen 4 chif.</string>
    <string name="parental_wrong_pin">PIN lan pa bon.</string>
    <string name="parental_now_on">Kontwòl paran limen: kategori pou granmoun yo kache.</string>
    <string name="parental_now_off">Kontwòl paran etenn.</string>
    <string name="set_language">Lang: %1$s</string>
    <string name="set_customer">Kliyan: %1$s</string>
    <string name="set_sort">Lòd chanèl yo: %1$s</string>
    <string name="sort_az">A → Z</string>
    <string name="sort_server">Lòd orijinal</string>
    <string name="set_playlist">Playlist: %1$s</string>
    <string name="set_playlist_title">Playlist</string>
    <string name="set_autostart">Louvri app la lè aparèy la limen: %1$s</string>
    <string name="set_last_channel">Jwe dènye chanèl la lè app la louvri: %1$s</string>
    <string name="switch_on">LIMEN</string>
    <string name="switch_off">ETENN</string>
    <string name="set_expiry">Dat ekspirasyon: %1$s</string>
    <string name="set_expiry_title">Abònman</string>
    <string name="set_about">Konsènan app la (vèsyon %1$s)</string>
    <string name="set_about_title">Konsènan</string>
    <string name="disclaimer">Galaxy TV Stick se yon lektè videyo sèlman. Li pa vini ak okenn chanèl, fim oswa kontni.</string>
    <string name="set_about_fmt">Galaxy TV Stick\nVèsyon: %1$s\nAparèy: %2$s\nAndroid: %3$s</string>
    <string name="update_title">Nouvo vèsyon disponib</string>
    <string name="update_msg">Vèsyon %1$s Galaxy TV Stick la disponib. Peze \"Mete ajou\" pou enstale l. Reglaj ou yo ap rete jan yo ye.</string>
    <string name="update_msg_force">Fòk ou enstale vèsyon %1$s pou kontinye sèvi ak Galaxy TV Stick. Peze \"Mete ajou\".</string>
    <string name="update_now">Mete ajou</string>
    <string name="update_later">Pita</string>
    <string name="update_downloading">Ap telechaje… %1$d%%</string>
    <string name="update_failed">Mizajou a pa mache: %1$s</string>
</resources>